<resources>
    <string name="app_name">Inventario</string>
    <string name="action_settings">Configurações</string>
    <string name="none_paired">Não pareado</string>
    <string name="btn_ON">ON</string>
    <string name="btn_OFF">OFF</string>
    <string name="equipt_register">Cad. de equiptos</string>
    <string name="tivit">TIVIT</string>
    <string name="states">Estados</string>
    <string name="citys">Cidades</string>
    <string name="address">Endereço</string>
    <string name="types">Tipos</string>
    <string name="manufacturer">Fabricante</string>
    <string name="model">Modelo</string>
    <string name="serial">Número de série</string>
    <string name="patrimony">Patrimonio</string>
    <string name="status">Status</string>
    <string name="user_name">Nome do usuário</string>
    <string name="hostname">Hostname</string>
    <string name="processor">Processador</string>
    <string name="clear">Limpar</string>
    <string name="register">Cadastrar</string>
    <string name="site_name">Nome do site</string>
    <string name="departament">Departamento</string>
    <string name="center_coust">Centro de custo</string>
    <string name="ic">IC</string>
    <string name="rfid">RFID</string>
    <string name="sub_status">Substatus</string>
    <string name="provider">Fornecedor</string>
    <string name="equipt_type">Tipo de equipamento</string>
    <string name="acquisition">Tipo de aquisição</string>
    <string name="locality">Localidade</string>
    <string name="term">Termo</string>
    <string name="organization">Organização</string>
    <string name="invoice">Nota fiscal</string>
    <string name="installation_date">Data de instalação</string>
    <string name="select">Selecione</string>
    <string name="buy_date">Data de compra</string>
    <string name="end_garranty">Final garantia</string>
    <string name="end_leasing">Fim do leasing</string>
    <string name="contract">Contrato</string>
    <string name="last_code">Código anterior</string>
    <string name="mac_address">Mac address</string>
    <string name="connect_net">Rede conectada</string>
    <string name="ip">Ip</string>
    <string name="trash_code">Código de descarte</string>
    <string name="incident">Incidente</string>
    <string name="installation_kit">Kit instalação</string>
    <string name="save">Salvar</string>
    <string name="equipament_save">Equipamento cadastrado com sucesso.</string>
    <string name="error_save">Erro, problema na inclusão.</string>
    <string name="register_date">Data de cadastro</string>
    <string name="code">Código</string>
    <string name="connect">Conectar</string>
    <string name="connection_read">Conexão ao leitor</string>
    <string name="rfid_read">Ler RFID</string>
    <string name="phrase_rfid">Acione o leitor manualmete e aproxime a TAG do sensor.</string>
    <string name="id">Código</string>
    <string name="confirm">Confirme</string>
    <string name="keep_location">Gostaria de manter a localidade?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="serial_empty">Informe o número de série.</string>
    <string name="registred">Cadastrados</string>
    <string name="score">Contagem</string>
    <string name="nothing_bluetooth">O recurso bluetooth não está disponivel.</string>
    <string name="amount_found">Equipamentos Dentro do Inventário</string>
    <string name="pending">Equipamentos Fora do Inventário (Novos)</string>
    <string name="reading_start">Iniciar leitura</string>
    <string name="end_score">Finalizar contagem</string>
    <string name="generate_report">Gerar relatório</string>
    <string name="score_starting">Iniciar contagem</string>
    <string name="ending">Finalizado?</string>
    <string name="confirm_end_score">Confirma a finalização da contagem?</string>
    <string name="continue_reading">Continuar leitura</string>
    <string name="bluetooth_actived">Bluetooth ativado</string>
    <string name="pause_score">Pausar contagem</string>
    <string name="restart_score">Retomar contagem</string>
    <string name="account_type">com.tivit.inventariodmt.account</string>
    <string name="provider_authority">com.tivit.inventariodmt</string>
    <string name="title_activity_equipamento_teste">EquipamentoTeste</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
</resources>
