<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.tivit.inventariodmt.EquipamentosActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tipoEquipamento"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvId"
                android:layout_alignParentRight="true"
                android:gravity="end"
                android:layout_alignRight="@id/tvId" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvId"
                android:layout_below="@id/tvId"
                android:text="@string/serial"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tvSerial"
                android:layout_alignRight="@id/tvSerial"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPatrimonio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvSerial"
                android:layout_below="@id/tvSerial"
                android:text="@string/patrimony"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/patrimonio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tvPatrimonio"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@id/tvPatrimonio"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDataCriacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/tvPatrimonio"
                android:text="@string/register_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dataCriacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tvDataCriacao"
                android:layout_alignParentRight="true"
                android:gravity="end" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvRfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rfid"
                android:textStyle="bold"
                android:textAlignment="textStart"/>
            <TextView
                android:id="@+id/rfid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>